# vrc-yutils

./: Cargo.toml
.github/workflows/: build.yaml
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: atoms.ts  fetch.ts  main.tsx
frontend/src/components/: avatar.tsx  user.tsx
frontend/src/components/ui/: button.tsx  sidebar.tsx  use-toast.ts
frontend/src/router/: RouterView.tsx  router.ts
frontend/src/types/: config.ts  vrchat.ts
frontend/src/views/: App.tsx  Authorize.tsx  Friends.tsx  Settings.tsx  friends.tsx
src/: authorize.rs  fetcher.rs  init.rs  main.rs  udp_client.rs  var.rs  vrc_structs.rs
src/endpoints/: auth.rs  friends.rs  i.rs  mod.rs
src/log/: log_reader.rs  mod.rs  processor.rs
src/websocket/: stream.rs
src/xsoverlay/: mod.rs  notify_join.rs  websocket.rs
